package com.github.davidmoten.reels;

import java.lang.reflect.Constructor;
import java.lang.reflect.InvocationTargetException;
import java.util.Arrays;
import java.util.Map;
import java.util.Optional;
import java.util.concurrent.ConcurrentHashMap;
import java.util.concurrent.atomic.AtomicLong;
import java.util.function.BiConsumer;
import java.util.function.Supplier;

import com.github.davidmoten.guavamini.Preconditions;
import com.github.davidmoten.reels.internal.ActorRefImpl;
import com.github.davidmoten.reels.internal.supervisor.SupervisorDefault;

/**
 * Creates actors, disposes actors and looks actors up by name.
 */
public final class Context implements Disposable {

    public static final Context DEFAULT = new Context();

    private final Supervisor supervisor;

    private final AtomicLong counter = new AtomicLong();
    private final Map<String, ActorRef<?>> actors = new ConcurrentHashMap<>();

    private volatile boolean disposed;

    public Context(Supervisor supervisor) {
        this.supervisor = supervisor;
    }

    public Context() {
        this(SupervisorDefault.INSTANCE);
    }
    
    public static Context create() {
        return new Context();
    }

    public <T> ActorRef<T> createActor(Class<? extends Actor<T>> actorClass) {
        return createActor(actorClass, actorClass.getName() + "-" + Long.toString(counter.incrementAndGet()));
    }

    public <T> ActorRef<T> createActor(Class<? extends Actor<T>> actorClass, String name) {
        return createActor(actorClass, name, Scheduler.computation());
    }

    public <T> ActorRef<T> createActor(Class<? extends Actor<T>> actorClass, String name, Scheduler processMessagesOn) {
        return createActor(actorClass, name, processMessagesOn, supervisor, Optional.empty());
    }

    public <T> ActorRef<T> createActor(Class<? extends Actor<T>> actorClass, String name, Scheduler processMessagesOn,
            Supervisor supervisor, Optional<ActorRef<?>> parent) {
        Preconditions.checkArgument(actorClass != null, "actorFactory cannot be null");
        return createActor(() -> createActorObject(actorClass), name, processMessagesOn, supervisor, parent);
    }

    public <T> ActorRef<T> createActor(Supplier<? extends Actor<T>> actorFactory, String name,
            Scheduler processMessagesOn, Supervisor supervisor, Optional<ActorRef<?>> parent) {
        Preconditions.checkArgument(actorFactory != null, "actorFactory cannot be null");
        Preconditions.checkArgument(name != null, "name cannot be null");
        Preconditions.checkArgument(processMessagesOn != null, "processMessagesOn scheduler cannot be null");
        Preconditions.checkArgument(supervisor != null, "supervisor cannot be null");
        Preconditions.checkArgument(parent != null, "parent cannot be null");
        if (disposed) {
            throw new CreateException("cannot create actor because Context shutdown");
        }
        return insert(name, ActorRefImpl.create(name, actorFactory, processMessagesOn, this, supervisor, parent));
    }

    @SuppressWarnings("unchecked")
    private static <T> Actor<T> createActorObject(Class<? extends Actor<T>> actorClass) {
        Preconditions.checkArgument(actorClass != null, "actorFactory cannot be null");
        try {
            Optional<Constructor<?>> c = Arrays.stream(actorClass.getConstructors())
                    .filter(x -> x.getParameterCount() == 0).findFirst();
            if (!c.isPresent()) {
                throw new CreateException(
                        "Actor class must have a public no-arg constructor to be created with this method."
                                + " Another method is available to create ActorRef for an Actor instance that you provide.");
            }
            return (Actor<T>) c.get().newInstance();
        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException
                | InvocationTargetException e) {
            throw new CreateException(e);
        }
    }

    private <T> ActorRef<T> insert(String name, ActorRef<T> actorRef) {
        actors.put(name, actorRef);
        return actorRef;
    }

    @SuppressWarnings("unchecked")
    public <T> Optional<ActorRef<T>> lookupActor(String name) {
        return Optional.ofNullable((ActorRef<T>) actors.get(name));
    }

    public void disposeActor(String name) {
        ActorRef<?> a = actors.remove(name);
        if (a != null) {
            a.dispose();
        }
    }

    /**
     * Remove actor from context (so that when context is disposed actor.dispose()
     * is not called).
     * 
     * @param name name of the actor
     * @return the removed ActorRef
     */
    public ActorRef<?> removeActor(String name) {
        return actors.remove(name);
    }

    @Override
    public void dispose() {
        if (!disposed) {
            disposed = true;
            actors.forEach((name, actorRef) -> actorRef.dispose());
            actors.clear();
        }
    }

    @Override
    public boolean isDisposed() {
        return disposed;
    }

    /////////////////////////////
    // builder entry methods
    ////////////////////////////

    public <T> ActorBuilder<T> builder() {
        return new ActorBuilder<T>(this);
    }

    /**
     * Returns an ActorBuilder using the given match.
     * 
     * @param <T>        actor message type
     * @param <S>        match class type
     * @param matchClass match class
     * @param consumer   consumes messages of type S
     * @return builder builder
     */
    public <T, S extends T> ActorBuilder<T> match(Class<S> matchClass, BiConsumer<MessageContext<T>, S> consumer) {
        return new ActorBuilder<T>(this).match(matchClass, consumer);
    }

    public <T> ActorBuilder<T> factory(Supplier<? extends Actor<T>> factory) {
        return new ActorBuilder<T>(this).factory(factory);
    }

    public <T> ActorBuilder<T> processor(BiConsumer<MessageContext<T>, ? super T> consumer) {
        return new ActorBuilder<T>(this).processor(consumer);
    }

}
